--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.3.0
   carousel_slider: ^4.2.1
+  intl: ^0.18.1
+  custom_pop_up_menu: ^1.2.4
 
 dev_dependencies:
   flutter_test:
