add internet permission main/AndroidMainifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.soft_bd_skill_test">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="soft_bd_skill_test"
         android:name="${applicationName}"
